[gd_scene load_steps=9 format=2]

[ext_resource path="res://interface/main-menu/OnlineLobby.gd" type="Script" id=1]
[ext_resource path="res://assets/interfaces/main-menu/main-menu.png" type="Texture" id=2]
[ext_resource path="res://fonts/roboto_24.tres" type="DynamicFontData" id=3]
[ext_resource path="res://interface/main-menu/ftf-icon.png" type="Texture" id=4]
[ext_resource path="res://interface/main-menu/version.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=2]
size = 15
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=1]
size = 35
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 3 )

[node name="OnlineLobby" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="backgroudn" type="TextureRect" parent="."]
margin_left = -16.6489
margin_top = 10.7181
margin_right = 2483.35
margin_bottom = 1090.72
rect_scale = Vector2( 0.55, 0.55 )
texture = ExtResource( 2 )

[node name="portInfo" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="TcpPortTip" type="Label" parent="portInfo"]
margin_left = 132.0
margin_top = 426.0
margin_right = 257.0
margin_bottom = 444.0
custom_fonts/font = SubResource( 2 )
text = "TCP Port"

[node name="TcpPortValue" type="Label" parent="portInfo"]
margin_left = 205.0
margin_top = 426.0
margin_right = 330.0
margin_bottom = 444.0
custom_fonts/font = SubResource( 2 )
text = "1245"

[node name="UDPPortTip" type="Label" parent="portInfo"]
margin_left = 132.0
margin_top = 443.0
margin_right = 257.0
margin_bottom = 461.0
custom_fonts/font = SubResource( 2 )
text = "UDP Port"

[node name="UDPPortValue" type="Label" parent="portInfo"]
margin_left = 205.0
margin_top = 443.0
margin_right = 330.0
margin_bottom = 461.0
custom_fonts/font = SubResource( 2 )
text = "1234"

[node name="MarginContainer" type="MarginContainer" parent="."]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 120.0
margin_top = 40.0
margin_right = -120.0
margin_bottom = -80.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 776.0
margin_bottom = 351.0

[node name="LeftPane" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 500.0
margin_bottom = 351.0
rect_min_size = Vector2( 500, 0 )

[node name="padding-top" type="Control" parent="MarginContainer/HBoxContainer/LeftPane"]
margin_right = 500.0
margin_bottom = 250.0
rect_min_size = Vector2( 0, 250 )

[node name="lobbyMsg" type="Label" parent="MarginContainer/HBoxContainer/LeftPane"]
margin_top = 254.0
margin_right = 500.0
margin_bottom = 296.0
custom_fonts/font = SubResource( 1 )
text = "Lobby Message"
autowrap = true

[node name="HBoxContainer8" type="HBoxContainer" parent="MarginContainer/HBoxContainer/LeftPane"]
margin_top = 300.0
margin_right = 500.0
margin_bottom = 324.0

[node name="padding5" type="Control" parent="MarginContainer/HBoxContainer/LeftPane/HBoxContainer8"]
margin_right = 30.0
margin_bottom = 24.0
rect_min_size = Vector2( 30, 0 )

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/LeftPane/HBoxContainer8"]
margin_left = 34.0
margin_top = 3.0
margin_right = 159.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 2 )
text = "IP Address of host"

[node name="ipAddrLineEdit" type="LineEdit" parent="MarginContainer/HBoxContainer/LeftPane/HBoxContainer8"]
margin_left = 163.0
margin_right = 263.0
margin_bottom = 24.0
rect_min_size = Vector2( 100, 0 )

[node name="cnxButton" type="Button" parent="MarginContainer/HBoxContainer/LeftPane/HBoxContainer8"]
margin_left = 267.0
margin_right = 331.0
margin_bottom = 24.0
text = "Connect"

[node name="reConnectButton" type="Button" parent="MarginContainer/HBoxContainer/LeftPane"]
margin_top = 328.0
margin_right = 500.0
margin_bottom = 348.0
text = "Reconnect"

[node name="padding-middle" type="Control" parent="MarginContainer/HBoxContainer"]
margin_left = 504.0
margin_right = 504.0
margin_bottom = 351.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 508.0
margin_right = 776.0
margin_bottom = 351.0

[node name="logo" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 268.0
margin_bottom = 169.0
texture = ExtResource( 4 )

[node name="version" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 173.0
margin_right = 268.0
margin_bottom = 197.0
custom_fonts/font = SubResource( 3 )
text = "version 0.40.4 - Godot v3.1.2"
script = ExtResource( 5 )

[node name="padding" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 201.0
margin_right = 268.0
margin_bottom = 351.0
rect_min_size = Vector2( 0, 150 )
